--- a/bloco_3/dia_1/exercicio1.html
+++ b/bloco_3/dia_1/exercicio1.html
@@ -6,18 +6,21 @@
   </head>
   <body>
     <h1>Exercício dia 3.1</h1>
-    <h2>Lista de amizades</h2>
-    <ul><li>Luciano Lanes</li>
-    <li>Thaísa Medeiros</li>
-    <li>Rafael Primon</li>
-    <li>Sérgio Barbosa</li></ul>
 
-    <img src="https://cdn.mos.cms.futurecdn.net/znryavfn4Sp6giB9pz7vHQ-970-80.jpg.webp" width="200px">
-    <img src="IMG_3763.JPG" width ="200px">
-    <!-- Exercícios
-     1 - Crie uma lista das pessoas que você já fez amizade na Trybe
-     2 - Adicione uma imagem que venha de uma URL externa.
-     3 - Adicione uma imagem que está no seu computador, local
-    -->
+    <h2>Lista de amizades</h2>
+    <ul><li><a href="#luciano">Luciano Lanes</a></li>
+    <li><a href="#thaisa">Thaísa Medeiros</a></li>
+    <li><a href="#rafael">Rafael Primon</a></li>
+    <br>
+    <img src="https://cdn.mos.cms.futurecdn.net/znryavfn4Sp6giB9pz7vHQ-970-80.jpg.webp" width="500px">
+    <img src="IMG_3763.JPG" width ="500px">
+    <br><br>
+    <a href="https://www.google.com" target="_blank">Link para o Google</a>
+    
+    <br><br><hr>
+    <p id="luciano">Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano exto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano exto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano Texto sobre Luciano</p><br><br>
+    <p id ="thaisa">Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa exto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa Texto sobre Thaísa</p><br><br>
+    <p id="rafael">Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael Texto sobre Rafael</p><br><br>
+    
   </body>
 </html>
