--- a/bloco_3/dia_3/ex_2.html
+++ b/bloco_3/dia_3/ex_2.html
@@ -9,9 +9,9 @@
     <h1>Exercícios de fixação 3.3</h1>
     <img src="https://bit.ly/39HLUyi" alt="jumpMario" class="super-mario" />
     <img src="https://bit.ly/3arGfMc" alt="gomba" class="goomba" />
-    <p class="word">
+    <div><p class="word">
       Goomba, do something!
-    </p>
+    </p></div>
     <img src="https://bit.ly/3tmxgED" alt="baloon" class="baloon" />
     <img src="https://bit.ly/2MV2bY0" alt="bowser" class="bowser" />
 
