--- a/bloco_3/dia_4/ex_4.2.html
+++ b/bloco_3/dia_4/ex_4.2.html
@@ -10,5 +10,10 @@
   <body>
     <!--insira os elementos aqui-->
     <header><h1>Soco a 80km/h: Conheça o Stomatopoda.</h1></body>header>
+    <nav><ul>
+        <li>Página Inicial</li>
+        <li>Sobre</li>
+        <li>Contato</li>
+    </ul></nav>
   </body>
 </html>
