--- a/bloco_3/dia_4/ex_4.2.html
+++ b/bloco_3/dia_4/ex_4.2.html
@@ -10,10 +10,32 @@
   <body>
     <!--insira os elementos aqui-->
     <header><h1>Soco a 80km/h: Conheça o Stomatopoda.</h1></body>header>
+
     <nav><ul>
         <li>Página Inicial</li>
         <li>Sobre</li>
         <li>Contato</li>
     </ul></nav>
+
+    <article><h2>Fatos sobre o Stomatopoda</h2>
+        <section><h3>Informações gerais</h3>
+        <p>Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda.</p>
+        </section>
+
+        <section><h3>Fato 1</h3>
+        <img>
+        <p>Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda.</p>
+        </section>
+
+        <section><h3>Fato 2</h3>
+        <img>
+        <p>Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda.</p>
+        </section>
+        
+        <aside><h3>Videos</h3><ul><li><a href="https://www.youtube.com/watch?v=E0Li1k5hGBE" target="_blank">Mantis Shrimp Packs a Punch</a>
+        <li><a href="https://www.youtube.com/watch?v=Hwji93BVjnI" target="_blank">Mantis Shrimp vs Octopus</a></li>
+        </ul></aside>
+        <footer><h3>Conteúdo compilado por Camila Malvessi, 2021.</h3></footer>
+    </article>
   </body>
 </html>
