--- a/bloco_3/dia_4/ex_4.2.html
+++ b/bloco_3/dia_4/ex_4.2.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="style4.2.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Black+Ops+One&family=Oi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <!--insira os elementos aqui-->
-    <header><h1>Soco a 80km/h: Conheça o Stomatopoda.</h1></body>header>
+    <header><h1>Soco a 80km/h: Conheça o Stomatopoda.</h1></header>
 
     <nav><ul>
         <li>Página Inicial</li>
