--- a/bloco_3/dia_4/ex_4.2.html
+++ b/bloco_3/dia_4/ex_4.2.html
@@ -13,7 +13,7 @@
     <!--insira os elementos aqui-->
     <header><h1>Soco a 80km/h: Conheça o Stomatopoda.</h1></header>
 
-    <nav><ul>
+    <nav class="navlinks"><ul>
         <li>Página Inicial</li>
         <li>Sobre</li>
         <li>Contato</li>
