--- a/bloco_3/dia_4/ex_4.2.html
+++ b/bloco_3/dia_4/ex_4.2.html
@@ -13,14 +13,34 @@
     <!--insira os elementos aqui-->
     <header><h1>Soco a 80km/h: Conheça o Stomatopoda.</h1></header>
 
-    <nav class="navlinks"><ul>
-        <li>Página Inicial</li>
-        <li>Sobre</li>
-        <li>Contato</li>
-    </ul></nav>
+    <nav><ul>
+        <li class="navlinks"><a href="">Página Inicial</a></li>
+        <li class="navlinks"><a href="">Sobre</a></li>
+        <li class="navlinks"><a href="">Contato</a></li>
+        </ul></nav>
 
     <article><h2>Fatos sobre o Stomatopoda</h2>
         <section><h3>Informações gerais</h3>
+        <table>
+          <tr>
+            <th>Reino</th>
+            <th>Filo</th>
+            <th>Subfilo</th>
+            <th>Classe</th>
+            <th>Subclasse</th>
+            <th>Ordem</th>
+            <th>Nome científico</th>
+          </tr>
+          <tr>
+            <td>Animalia</td>
+            <td>Arthropoda</td>
+            <td>Crustacea</td>
+            <td>Malacostraca</td>
+            <td>Hoplocarida</td>
+            <td>Stomatopoda</td>
+            <td><i>Odontodactylus scyllarus</i></td>
+          </tr>
+        </table>
         <p>Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda.</p>
         </section>
 
