Adiciona conteudo de informaçoes gerais e muda subtitulos

--- a/bloco_3/dia_4/ex_4.2.html
+++ b/bloco_3/dia_4/ex_4.2.html
@@ -41,15 +41,15 @@
             <td><i>Odontodactylus scyllarus</i></td>
           </tr>
         </table>
-        <p>Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda.</p>
+        <p>Stomaropoda é uma ordem de crustáceos marinhos que inclui mais de 400 espécies. Esses animais tem como característica marcante a morfologia da segunda pata torácica, que é um apêndice subquelado, parecendo-se com uma pata de louva-a-deus. Apresentam uma grande variação de tamanho e são encontrados nas costas tropicais e subtropicais. Habitam o fundo do mar, onde vivem a maior parte do tempo escondidos em buracos ou outros orifícios. São predadores ativos e exclusivamente carnívoros.</p>
         </section>
 
-        <section><h3>Fato 1</h3>
+        <section><h3>Visão excepcional</h3>
         <img>
         <p>Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda.</p>
         </section>
 
-        <section><h3>Fato 2</h3>
+        <section><h3>Comportamento</h3>
         <img>
         <p>Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda Parágrafo sobre Stomatopoda.</p>
         </section>
