--- a/bloco_5/dia_2/exercicio_fix.html
+++ b/bloco_5/dia_2/exercicio_fix.html
@@ -1,12 +1,23 @@
-<div id="paiDoPai">
-    <div id="pai">
-      <div id="primeiroFilho"></div>
-      <div id="elementoOndeVoceEsta">
-        <div id="primeiroFilhoDoFilho"></div>
-        <div id="segundoEUltimoFilhoDoFilho"></div>
+  
+  
+<!DOCTYPE html>
+<html>
+  <body>
+    <div id="paiDoPai">
+        <div id="pai">
+          <div id="primeiroFilho"></div>
+          <div id="elementoOndeVoceEsta">
+            <div id="primeiroFilhoDoFilho"></div>
+            <div id="segundoEUltimoFilhoDoFilho"></div>
+          </div>
+          Atenção!
+          <div id="terceiroFilho"></div>
+          <div id="quartoEUltimoFilho"></div>
+        </div>
       </div>
-      Atenção!
-      <div id="terceiroFilho"></div>
-      <div id="quartoEUltimoFilho"></div>
-    </div>
-  </div>
+    
+      <script>
+
+     </script>
+  </body>
+</html>
