resolve item 7 e inicia item 8

--- a/bloco_5/dia_2/exercicio1.html
+++ b/bloco_5/dia_2/exercicio1.html
@@ -80,6 +80,15 @@
         let divRightCont = document.createElement('div');
         divmain.appendChild(divRightCont);
 
+        let imagem1 = document.createElement('img');
+        divLeftCont.appendChild(imagem1);
+        imagem1.className = 'small-image';
+        imagem1.src = 'https://picsum.photos/200';
+
+        let ul1 = document.createElement('ul');
+        divRightCont.appendChild(ul1);
+        
+
       // COLOQUE SEU CÓDIGO AQUI
     </script>
   </body>
