--- a/bloco_5/dia_2/exercicio1.html
+++ b/bloco_5/dia_2/exercicio1.html
@@ -87,6 +87,11 @@
 
         let ul1 = document.createElement('ul');
         divRightCont.appendChild(ul1);
+        for (index = 1; index <= 10; index += 1){
+          let liNum = document.createElement('li');
+          ul1.appendChild(liNum);
+          liNum.innerHTML = index;
+        }
         
 
       // COLOQUE SEU CÓDIGO AQUI
