--- a/bloco_5/dia_4/index.html
+++ b/bloco_5/dia_4/index.html
@@ -1,46 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Leitor</title>
-  <style>
-  body {
-      margin: 10px;
-  }
-  .preferences {
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      flex-wrap: wrap;
-      border: 1px solid green;
-  }
-  .options {
-      display: flex;
-      flex-direction: column;
-  }
-  .title {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-  }
-  .description {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-style: italic;
-  }
-  .content {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin: 15px;
-  }
-  .paragraph {
-      display: flex;
-  }
-  </style>
   <script>
     window.onload = function() {
       function setBackgroundColor(color) {
