--- a/bloco_6/dia_6.1/form.html
+++ b/bloco_6/dia_6.1/form.html
@@ -11,7 +11,18 @@
     <form>
         <fieldset>
             <label for="nome-compl">Nome completo</label>
-            <input type="text" id="nome-compl" name="nome" maxlength="40" required><br><br>
+            <input type="text" id="nome-compl" name="input-nome" maxlength="40" required><br><br>
+            <label for="email">Email</label>
+            <input type="text" id="email" name="input-email" maxlength="50" required><br><br>
+            <label for="cpf">CPF</label>
+            <input type="text" id="cpf" name="input-cpf" maxlength="11" required><br><br>
+            <label for="endereco">Endereço</label>
+            <input type="text" id="endereco" name="input-end" maxlength="200" required><br><br>
+            <label for="cidade">Cidade</label>
+            <input type="text" id="cidade" name="input-cidade" maxlength="28" required><br><br>
+            <label for="dropdown-estado">Estado</label>
+                <select nome="input-estado" id="dropdown-estado" required>
+                </select><br><br>
         </fieldset>
     </form>
 </body>
