--- a/bloco_6/dia_6.1/form.html
+++ b/bloco_6/dia_6.1/form.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+    <script src="script.js"></script>
+    <title>Formulário</title>
 </head>
 <body>
     <header><h1>Formulário</h1></header>
@@ -21,8 +23,7 @@
             <label for="cidade">Cidade</label>
             <input type="text" id="cidade" name="input-cidade" maxlength="28" required><br><br>
             <label for="dropdown-estado">Estado</label>
-                <select nome="input-estado" id="dropdown-estado" required>
-                </select><br><br>
+            <select nome="input-estado" id="dropdown-estado"></select><br><br>
         </fieldset>
     </form>
 </body>
