--- a/bloco_6/dia_6.1/form.html
+++ b/bloco_6/dia_6.1/form.html
@@ -4,13 +4,13 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
     <title>Formulário</title>
 </head>
 <body>
     <header><h1>Formulário</h1></header>
-    <form>
+    <form action="" method="GET">
         <fieldset>
             <label for="nome-compl">Nome completo</label>
             <input type="text" id="nome-compl" name="input-nome" maxlength="40" required><br><br>
@@ -23,7 +23,8 @@
             <label for="cidade">Cidade</label>
             <input type="text" id="cidade" name="input-cidade" maxlength="28" required><br><br>
             <label for="dropdown-estado">Estado</label>
-            <select nome="input-estado" id="dropdown-estado"></select><br><br>
+            <select name="input-estado" id="select-estado">
+            </select><br><br>
         </fieldset>
     </form>
 </body>
