conserta o select dos estados

--- a/bloco_6/dia_6.1/form.html
+++ b/bloco_6/dia_6.1/form.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js"></script>
   <title>Formulário</title>
 </head>
 <body>
@@ -28,8 +27,8 @@
       <label for="cidade">Cidade</label>
       <input type="text" id="cidade" name="input-cidade" maxlength="28" required><br><br>
 
-      <label for="dropdown-estado">Estado</label>
-      <select name="input-estado" id="select-estado">
+      <label for="select-estado">Estado</label>
+      <select name="input-estado" id="select-estado" required>
       </select><br><br>
 
       <label for="end-apart" id="label-apart">Apartamento</label>
@@ -55,5 +54,6 @@
 
     </fieldset>
   </form>
+  <script src="script.js"></script>
 </body>
 </html>
