--- a/bloco_6/dia_6.2/form.html
+++ b/bloco_6/dia_6.2/form.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+  <link rel="stylesheet" href="style.css">
   <title>Formulário</title>
 </head>
 <body>
   <header><h1>Formulário</h1></header>
   <form action="" method="GET">
-    <fieldset>
+    <div>
       <h2>Dados pessoais</h2>
       <label for="nome-compl" id="label-nome">Nome completo</label>
       <input type="text" id="nome-compl" name="input-nome" maxlength="40" required><br><br>
@@ -36,9 +37,9 @@
       <label for="end-casa" id="label-casa">Casa</label>
       <input type="radio" id="end-casa" name="tipo-endereco" value="casa"required><br><br>
     
-    </fieldset>
+    </div>
     <br>
-    <fieldset>
+    <div>
       <h2>Experiências</h2>
       <label for="textarea-resumo" id="label-resumo">Resumo do currículo</label>
       <textarea name="resumo-curriculo" id="textarea-resumo" maxlength="1000" rows="10" cols="40" required></textarea><br><br>
@@ -52,7 +53,7 @@
 
 
 
-    </fieldset>
+    </div>
   </form>
   <script src="script.js"></script>
 </body>
