--- a/bloco_6/dia_6.2/form.html
+++ b/bloco_6/dia_6.2/form.html
@@ -72,7 +72,11 @@
     
   </form>
   <button type="submit" class="" id="btn-submit">Enviar</button>
+  <button type="button"></button>
+  <script type="text/javascript" src="jquery-3.6.0.min.js"></script>
+  <script src="moment.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="pikaday.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
