--- a/bloco_6/dia_6.1/form.html
+++ b/bloco_6/dia_6.1/form.html
@@ -9,23 +9,28 @@
 </head>
 <body>
   <header><h1>Formulário</h1></header>
-  <form action="" method="GET">
+  <form action="" method="GET" id="form">
     <fieldset>
       <h2>Dados pessoais</h2>
       <label for="nome-compl" id="label-nome">Nome completo</label>
-      <input type="text" id="nome-compl" name="input-nome" maxlength="40" required><br><br>
+      <input type="text" id="nome-compl" name="input-nome" maxlength="40"><br><br>
+      <div id="error-hint-name"></div>
 
       <label for="email">Email</label>
-      <input type="text" id="email" name="input-email" maxlength="50" required><br><br>
+      <input type="text" id="email" name="input-email" maxlength="50"><br><br>
+      <div id="error-hint-email"></div>
 
       <label for="cpf">CPF</label>
-      <input type="text" id="cpf" name="input-cpf" maxlength="11" required><br><br>
+      <input type="text" id="cpf" name="input-cpf" maxlength="11"><br><br>
+      <div id="error-hint-CPF"></div>
 
       <label for="endereco">Endereço</label>
-      <input type="text" id="endereco" name="input-end" maxlength="200" required><br><br>
+      <input type="text" id="endereco" name="input-end" maxlength="200"><br><br>
+      <div id="error-hint-end"></div>
 
       <label for="cidade">Cidade</label>
-      <input type="text" id="cidade" name="input-cidade" maxlength="28" required><br><br>
+      <input type="text" id="cidade" name="input-cidade" maxlength="28"><br><br>
+      <div id="error-hint-cidade"></div>
 
       <label for="select-estado">Estado</label>
       <select name="input-estado" id="select-estado" required>
