--- a/bloco_6/dia_6.1/form.html
+++ b/bloco_6/dia_6.1/form.html
@@ -14,33 +14,29 @@
       <h2>Dados pessoais</h2>
       <label for="nome-compl" id="label-nome">Nome completo</label>
       <input type="text" id="nome-compl" name="input-nome" maxlength="40"><br><br>
-      <div id="error-hint-name"></div>
 
-      <label for="email">Email</label>
+      <label for="email" id="label-email">Email</label>
       <input type="text" id="email" name="input-email" maxlength="50"><br><br>
-      <div id="error-hint-email"></div>
 
-      <label for="cpf">CPF</label>
+      <label for="cpf" id="label-cpf">CPF</label>
       <input type="text" id="cpf" name="input-cpf" maxlength="11"><br><br>
-      <div id="error-hint-CPF"></div>
 
-      <label for="endereco">Endereço</label>
+      <label for="endereco" id="label-endereco">Endereço</label>
       <input type="text" id="endereco" name="input-end" maxlength="200"><br><br>
-      <div id="error-hint-end"></div>
 
-      <label for="cidade">Cidade</label>
+      <label for="cidade" id="label-cidade">Cidade</label>
       <input type="text" id="cidade" name="input-cidade" maxlength="28"><br><br>
-      <div id="error-hint-cidade"></div>
+  
 
-      <label for="select-estado">Estado</label>
-      <select name="input-estado" id="select-estado" required>
+      <label for="select-estado" id="label-estado">Estado</label>
+      <select name="input-estado" id="select-estado">
       </select><br><br>
 
       <label for="end-apart" id="label-apart">Apartamento</label>
-      <input type="radio" id="end-apart" name="tipo-endereco" value="apartamento"required>
+      <input type="radio" id="end-apart" name="tipo-endereco" value="apartamento">
       <label for="end-casa" id="label-casa">Casa</label>
-      <input type="radio" id="end-casa" name="tipo-endereco" value="casa"required><br><br>
-    
+      <input type="radio" id="end-casa" name="tipo-endereco" value="casa"><br><br>
+<!--     
     </fieldset>
     <br>
     <fieldset>
@@ -54,9 +50,8 @@
       <input type="text" id="desc-cargo1" name="input-cargo1-desc" maxlength="500" required><br>
       <label for="data-inicio">Data de início</label>
       <input type="text" id="data-inicio" name="input-datainicio" required><br><br>
-
-
-
+       -->
+      <button type="submit" id="submit-btn">Enviar</button>
     </fieldset>
   </form>
   <script src="script.js"></script>
