refatoraçao e tentativa de criar as divs apropriadas para cada caso

--- a/bloco_6/dia_6.1/form.html
+++ b/bloco_6/dia_6.1/form.html
@@ -21,7 +21,9 @@
       <label for="cpf" id="label-cpf">CPF</label>
       <input type="text" id="cpf" name="input-cpf" maxlength="11"><br><br>
 
-      <label for="endereco" id="label-endereco">Endereço</label>
+      <div id="divMae"></div>
+
+      <!-- <label for="endereco" id="label-endereco">Endereço</label>
       <input type="text" id="endereco" name="input-end" maxlength="200"><br><br>
 
       <label for="cidade" id="label-cidade">Cidade</label>
@@ -36,6 +38,7 @@
       <input type="radio" id="end-apart" name="tipo-endereco" value="apartamento">
       <label for="end-casa" id="label-casa">Casa</label>
       <input type="radio" id="end-casa" name="tipo-endereco" value="casa"><br><br>
+      <div id="divMae"></div> -->
 <!--     
     </fieldset>
     <br>
