modifica codigo do pickaday

--- a/bloco_6/dia_6.2/form.html
+++ b/bloco_6/dia_6.2/form.html
@@ -17,7 +17,7 @@
 
       <div class="mb-3">
         <label class="form-label" for="nome-compl" id="label-nome">Nome completo</label>
-        <input class="form-control type="text" id="nome-compl" name="input-nome" maxlength="40" required>
+        <input class="form-control" type="text" id="nome-compl" name="input-nome" maxlength="40" required>
       </div>
 
       <div class="mb-3">
